# pycompgen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/compgen/: __init__.py  analyzers.py  cache.py  detectors.py  generators.py  logger.py  models.py
src/pycompgen/: __init__.py  analyzers.py  cache.py  detectors.py  generators.py  logger.py  models.py
tests/: conftest.py  test_analyzers.py  test_cache.py  test_detectors.py  test_generators.py  test_integration.py
